Duplikat elemen udah agak rapih dikit

--- a/src/main/resources/templates/karyawan.html
+++ b/src/main/resources/templates/karyawan.html
@@ -312,7 +312,7 @@ input::-webkit-inner-spin-button {
                                                                   <td><input class="form-control" type="date" style="width:200px"></td>
                                                              </tr>                          
                                                      </tbody>
-                                                <table class="tableCloningWorkExperiece">
+                                                <table class="table tableCloningWorkExperiece">
                                                 </table>     
                                                 <table>
                                                      <tbody>
