Duplikat elemen html fix

--- a/src/main/resources/templates/karyawan.html
+++ b/src/main/resources/templates/karyawan.html
@@ -297,7 +297,7 @@ input::-webkit-inner-spin-button {
                                                            </tr>
                                                       </tbody>                                                     
                                                 </table>
-                                                <table class="tableWorkExperience" id="tableWorkExperience" style="display:none">
+                                                <table class=" table tableWorkExperience" id="tableWorkExperience">
                                                      <tbody>                              
                                                             <tr>
                                                                   <td> Name Of Company </td>
@@ -629,7 +629,6 @@ input::-webkit-inner-spin-button {
     	$("#buttonWorkExperience").click(function(){
     		$('#tableWorkExperience').show();
             $('#tableWorkExperience').clone().appendTo(".tableCloningWorkExperiece");
-            $('#tableWorkExperience').hide();
     	})
     })
     
